--- a/style/less/header.less
+++ b/style/less/header.less
@@ -40,7 +40,7 @@
                 font-family: @font--opensan;
                 font-size: 11px;
                 line-height: 10px;
-                color: @color--header;
+                color: #888;
             }
         }
         .header__container--right {
@@ -245,7 +245,7 @@
                             left: 8px;
 
                             a {
-                                padding: 13px 16px 13px 16px;
+                                padding: 13px 15px 13px 0px;
                                 background-color: #ffffff;
                                 color: #424242;
                                 font-family: 'Montserrat', sans-serif;
@@ -352,6 +352,10 @@
 
                     .owl-carousel {
                         .item {
+                            max-width: 350px;
+                            max-height: 350px;
+                            margin-left: auto;
+                            margin-right: auto;
                             background-color: #fff;
                             .blog__item__image {
                                 width:100%;
@@ -409,6 +413,8 @@
                                 }
                             }
                             .blog__item_heath{
+                                height: 40px;
+                                padding-top: 10px;
                                 ul{
                                     margin-left:-30px;
                                     display:flex;
@@ -615,6 +621,28 @@
         }
        }
 }
+.content{
+    .banner--center {
+        .row {
+            .banner--center__banner01 {
+                p{
+
+                }
+                a {
+                    padding: 2px 14px;
+                    font-size: 17px;
+                }
+            }
+            .banner--center__banner03 {
+                a {
+                    padding: 2px 14px;
+                    font-size: 17px;
+                }
+            }
+
+        }
+    }
+}
 //  Screen 720px to 768px
 @media all and (min-width:720px){
     .owl-carousel .owl-dots.disabled {
@@ -810,6 +838,7 @@
                         font-size: 25px;
                     }
                     a{
+                        padding: 2px 8px;
                         font-size: 16px;
                     }
                 }
@@ -831,6 +860,7 @@
                         font-size: 16px;
                     }
                     a {
+                        padding: 2px 8px;
                         font-size: 14px;
                     }
                 }
@@ -843,9 +873,8 @@
         .footer--center{
             padding-left:0px;
             padding-right:0px;
-            padding-top:52px;
+            padding-top: 52px;
             .row{
-                padding-top: 5px;
                 height:292px;
                 .row__item1{
                     .footer01{
@@ -1084,7 +1113,7 @@
                         margin-top: 30px;
                         a{
                             top: 179px;
-                            left: 44px;
+                            left: 42px;
                             color: #f8f7fa;
                             padding: 10px 18px;
                             background-color: #8262b5;
@@ -1223,9 +1252,8 @@
         .footer--center{
             padding-left:0px;
             padding-right:0px;
-            padding-top:52px;
+            padding-top:41px;
             .row{
-                padding-top: 5px;
                 height:292px;
                 .row__item1{
                     .footer01{
@@ -1266,11 +1294,14 @@
                         }
                         .footer02--links{
                             height:240px;
+                            padding-left: 40px;
+                            padding-top: 16px;
                             .footer02--links1{
                                 ul{ 
                                     margin-top: 18px;
                                     margin-left: -42px;
                                     line-height: 30px;
+                                    word-spacing: -3px;
                                 }
                             }
                             .footer02--links2{
@@ -1298,6 +1329,8 @@
                             }
                         }
                         .footer03--contact{
+                            padding-left: 41px;
+                            padding-top: 12px;
                             ul{
                                 padding-top: 19px;
                                 font-size: 15px;
@@ -1309,7 +1342,7 @@
                                 }
                                 padding-top: 23px;
                                 padding-left: 99px;
-                                line-height: 33px;
+                                line-height: 34px;
                                 li{
                                     .map{
                                         padding-left: 15px;
