fix lai max height

--- a/style/less/header.less
+++ b/style/less/header.less
@@ -352,8 +352,8 @@
 
                     .owl-carousel {
                         .item {
-                            max-width: 350px;
-                            max-height: 350px;
+                            max-width: 365px;
+                            height: 388px;
                             margin-left: auto;
                             margin-right: auto;
                             background-color: #fff;
@@ -625,9 +625,7 @@
     .banner--center {
         .row {
             .banner--center__banner01 {
-                p{
-
-                }
+                p{}
                 a {
                     padding: 2px 14px;
                     font-size: 17px;
@@ -838,7 +836,6 @@
                         font-size: 25px;
                     }
                     a{
-                        padding: 2px 8px;
                         font-size: 16px;
                     }
                 }
@@ -860,7 +857,6 @@
                         font-size: 16px;
                     }
                     a {
-                        padding: 2px 8px;
                         font-size: 14px;
                     }
                 }
